--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^6.1.0
+  chips_choice: ^3.0.1
+  flutter_svg: ^2.0.9
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +63,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/Vegetables.png
+    - assets/images/malfof.png
+    - assets/images/zahra.png
+    - assets/images/Media.png
+    - assets/icons/heart.svg
+    - assets/icons/shoppingcart.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
