--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   chips_choice: ^3.0.1
   flutter_svg: ^2.0.9
   carousel_slider: ^4.2.1
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
